<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="udacity.android.inventory.activities.MainActivity">

    <!-- Description layout -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/item_description"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/description_text_size" />

        <EditText
            android:id="@+id/description_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/description_hint"
            android:textSize="@dimen/description_text_size" />

    </LinearLayout>

    <!-- Price layout -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/item_price"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/description_text_size" />

        <EditText
            android:id="@+id/price_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/price_hint"
            android:textSize="@dimen/description_text_size" />

    </LinearLayout>

    <!-- Quantity layout -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/item_quantity"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/description_text_size" />

        <EditText
            android:id="@+id/quantity_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/quantity_hint"
            android:textSize="@dimen/description_text_size" />

    </LinearLayout>

    <!-- Email layout -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/supplier_email"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/description_text_size" />

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:textSize="@dimen/description_text_size" />

    </LinearLayout>

    <!-- Image layout -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/image_path"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/description_text_size" />

        <EditText
            android:id="@+id/image_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/image_hint"
            android:textSize="@dimen/description_text_size" />

    </LinearLayout>

</LinearLayout>
