<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="udacity.android.inventory.activities.DetailsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Layout for text data -->
        <LinearLayout
            android:id="@+id/text_data_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <!-- Item description -->
            <TextView
                android:id="@+id/description_text_view"
                style="@style/list_item_style"
                android:textSize="@dimen/description_text_size" />

            <!-- Item price -->
            <TextView
                android:id="@+id/price_text_view"
                style="@style/list_item_style"
                android:textSize="@dimen/detail_text_size" />

            <!-- Item quantity -->
            <TextView
                android:id="@+id/quantity_text_view"
                style="@style/list_item_style"
                android:textSize="@dimen/detail_text_size" />

            <!-- Item supplier email -->
            <TextView
                android:id="@+id/email_text_view"
                style="@style/list_item_style"
                android:textSize="@dimen/detail_text_size" />

        </LinearLayout>

        <!-- Item image -->
        <ImageView
            android:id="@+id/item_image_view"
            android:layout_width="@dimen/image_dimen"
            android:layout_height="@dimen/image_dimen"
            android:scaleType="center" />

        <!-- Modify Quantity Layout -->
        <RelativeLayout
            android:id="@+id/modify_quantity_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_data_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/layout_group_vertical_margin">

            <TextView
                android:id="@+id/modify_quantity_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/bottom_margin"
                android:text="@string/update_quantity_label"
                android:textColor="@android:color/black"
                android:textSize="@dimen/description_text_size" />

            <RadioGroup
                android:id="@+id/modify_quantity_radiogroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/modify_quantity_label"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/sold_items_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sold_items_label"
                    android:textSize="@dimen/detail_text_size" />

                <RadioButton
                    android:id="@+id/received_shipment_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/received_shipment_label"
                    android:textSize="@dimen/detail_text_size" />

            </RadioGroup>

            <LinearLayout
                android:id="@+id/update_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/modify_quantity_radiogroup"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/quantity_edit_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_quantity_label"
                    android:textSize="@dimen/detail_text_size" />

                <Button
                    android:id="@+id/update_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update_button_label" />

            </LinearLayout>

            <TextView
                android:id="@+id/error_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/update_layout"
                android:layout_centerHorizontal="true"
                android:text="@string/quantity_error_text"
                android:textColor="@android:color/holo_red_light" />

        </RelativeLayout>

        <!-- Order and Delete buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/modify_quantity_layout"
            android:layout_marginTop="@dimen/layout_group_vertical_margin"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other_tasks_label"
                android:textColor="@android:color/black"
                android:textSize="@dimen/description_text_size" />

            <!-- Order and Delete Buttons -->
            <LinearLayout
                android:id="@+id/button_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/delete_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/button_margin"
                    android:text="@string/delete_button_label" />

                <Button
                    android:id="@+id/order_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/button_margin"
                    android:text="@string/order_button_label" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>
